<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/list_padding"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/item_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textAutoCorrect"
        android:id="@+id/itemText" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <EditText
        android:hint="@string/qty_hint"
        android:layout_weight="1"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qtyText" />


    <RadioGroup
        android:id="@+id/radioQty"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/radio_Pcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioPcs"
            android:checked="true" />
        <RadioButton
            android:text="@string/radio_Pkt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioPkt" />
        <RadioButton
            android:text="@string/radio_Kgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioKgs"/>
    </RadioGroup>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <EditText
        android:hint="@string/shopBy_hint"
        android:id="@+id/shopByText"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopbyDays"
            android:id="@+id/shopByLabel"/>
    </LinearLayout>
</LinearLayout>